feat: 完成同步上游更新並翻譯
- 更新 pyproject.toml 到版本 0.0.18 並翻譯描述
- 翻譯檢查清單模板到繁體中文
- 完成新功能的中文化整合

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "specify-cli"
-version = "0.0.3"
-description = "Setup tool for Specify spec-driven development projects"
+version = "0.0.18"
+description = "Specify CLI，GitHub Spec Kit 的一部分。一個用於引導您的專案進行規格驅動開發（SDD）的工具。"
 requires-python = ">=3.11"
 dependencies = [
     "typer",
     "rich",
-    "httpx",
+    "httpx[socks]",
     "platformdirs",
     "readchar",
     "truststore>=0.10.4",
